--- a/Tasks/task04/style.css
+++ b/Tasks/task04/style.css
@@ -14,6 +14,12 @@ a:link,a:visited{
   background-color: red;
   text-decoration: none;
 }
+a:hover{
+  color: #f0ffff;
+}
+a:active{
+  background-color: #d2691e;
+}
 input{
   display: block;
   margin: 10px 0;
