--- a/homeWorkTasks/task08/css/main.css
+++ b/homeWorkTasks/task08/css/main.css
@@ -1,6 +1,58 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
 /* CSS Reset */
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: 'Open Sans', arial;
+}
+/* float classes */
+.float-left {
+	float: left;
+}
+.float-right {
+	float: right;
+}
+.clear-fix {
+	clear: left;
+}
+/* margin classes */
+.margin-left-40 {
+	margin-left: 40px;
+}
+.margin-right-40 {
+	margin-right: 40px;
+}
+.margin-top-80 {
+	margin-top: 80px;
+}
+/* main sections */
+.main {
+	width: 90%;
+	margin: 100px auto 0;
+}
+.container {
+	width: 30%;
+}
+.container__content {
+	width: 88%;
+}
+/* img , title & description */
+.container__img {
+	width: 9%;
+	margin: -4px -4px 0 -11px;
+}
+.container__title {
+	font-family: 'Roboto';
+	color: #303030;
+	font-size: 17px;
+	font-weight: 500;
+	line-height: 1.38em;
+}
+.container__description {
+	color: #888;
+	font-size: 15px;
+	font-weight: 400;
+	line-height: 1.86em;
+	margin-top: 8px;
 }
