--- a/homeWorkTasks/task09/css/main.css
+++ b/homeWorkTasks/task09/css/main.css
@@ -6,7 +6,7 @@
 }
 
 .header {
-	background-color: rgba(0, 0, 0, 0.7);
+	background-color: #000;
 	padding: 15px 0;
 	display: flex;
 	justify-content: space-between;
