--- a/sessionTasks/task04/style.css
+++ b/sessionTasks/task04/style.css
@@ -1,9 +1,11 @@
-div {
+.outer {
+	width: 10%;
+	margin: 0 auto;
 	background-color: #000;
 	text-align: center;
 }
 
-a {
+.inner {
 	display: inline-block;
 	border: 2px solid rgba(255, 255, 255, 0.7);
 	color: #fff;
@@ -13,7 +15,7 @@ a {
 	position: relative;
 	cursor: pointer;
 }
-span {
+.outer__inner {
 	height: 8px;
 	width: 8px;
 	background: rgba(255, 255, 255, 0.9);
