--- a/homeWorkTasks/task11/css/main.css
+++ b/homeWorkTasks/task11/css/main.css
@@ -6,24 +6,107 @@
 	padding: 0;
 	box-sizing: border-box;
 }
-/******************************* */
-/*     CONTAINER && MEMEBER      */
-/******************************* */
+
+body {
+	font-family: 'Work Sans', sans-serif;
+	font-weight: 400;
+	line-height: 1.5;
+}
+a {
+	text-decoration: none;
+}
+/********************* */
+/*     CONTAINERS      */
+/********************* */
 .container {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	grid-template-rows: 1fr 1fr;
 }
-
 .member {
 	height: 420px;
+	position: relative;
+	overflow: hidden;
+}
+
+/********************************* */
+/*     MEMEBER TEXT && SOCIAL      */
+/********************************* */
+
+.member__text {
+	padding: 16px 0 18px 25px;
+	background-color: #fff;
+	width: calc(100% - 40px);
+	position: absolute;
+	left: -236px;
+	bottom: 20px;
+	transition: all 0.5s ease-out;
+}
+.member:hover .member__text {
+	left: 20px;
+}
+.member__text h5 {
+	font-size: 20px;
+	color: #171822;
+	font-weight: 600;
+	margin-bottom: 5px;
+}
+.member__text span {
+	font-size: 16px;
+	color: #f44949;
+	display: block;
+}
+.member__social {
+	display: inline-block;
+	padding: 10px 23px 8px;
+	border-radius: 0 0 4px 4px;
+	position: absolute;
+	top: -66px;
+	left: 40px;
+	transition: all 0.3s ease-out;
+}
+.member:hover .member__social {
+	top: 0px;
+}
+.member__social a {
+	display: inline-block;
+	font-size: 18px;
+	color: #fff;
+	margin-right: 10px;
+}
+.bg-gradient {
+	background-image: linear-gradient(120deg, #ee8425 0%, #f9488b 100%),
+		linear-gradient(120deg, #ee8425 0%, #f9488b 100%);
 }
 /********************** */
 /*     BACKGROUNDS      */
 /********************** */
 .bg {
+	width: 100%;
+	height: 100%;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: top center;
+	transition: all 0.5s;
+}
+
+.member:hover .bg,
+.member:focus .bg {
+	transform: scale(1.2);
+}
+.member:hover .bg:before,
+.member:focus .bg:before {
+	display: block;
+}
+.bg::before {
+	content: '';
+	display: none;
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-color: rgba(53, 74, 95, 0.349);
 }
 
 .bg-url-1 {
@@ -44,6 +127,7 @@
 .bg-url-6 {
 	background-image: url(../img/member-6.jpg.webp);
 }
+
 .bg-url-7 {
 	background-image: url(../img/member-7.jpg.webp);
 }
