--- a/homeWorkTasks/task12/css/main.css
+++ b/homeWorkTasks/task12/css/main.css
@@ -9,14 +9,10 @@
 }
 
 body {
-	line-height: 1.7;
 	color: #364d59;
-	font-weight: 400;
-	font-size: 1rem;
 	font-family: 'Work Sans', sans-serif;
-}
-a {
-	text-decoration: none;
+	font-weight: 400;
+	line-height: 1.7;
 }
 /*************************** */
 /*     GENERAL CLASSES       */
@@ -126,6 +122,7 @@ a {
 }
 .btn,
 .btn-text {
+	cursor: pointer;
 	color: #fff;
 	position: absolute;
 	left: 50%;
