adding hover to btns

--- a/homeWorkTasks/task12/css/main.css
+++ b/homeWorkTasks/task12/css/main.css
@@ -140,6 +140,10 @@ body {
 	text-transform: uppercase;
 	background-color: #efba6c;
 	bottom: 60px;
+	transition: all 0.3s ease;
+}
+.btn:hover {
+	background-color: #eaa43e;
 }
 .btn-text {
 	display: inline-block;
